<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="#EFE40C"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="288dp"
        android:layout_height="82dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="81dp"
        android:editable="false"
        android:ems="10"
        android:freezesText="true"
        android:hapticFeedbackEnabled="false"
        android:importantForAutofill="no"
        android:keepScreenOn="true"
        android:singleLine="true"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="305dp"
        android:layout_height="57dp"
        android:layout_marginBottom="35dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/e_mail_id"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:layout_marginBottom="29dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/lbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/lbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#EBEC1010"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/nbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/nbutton"
        android:layout_width="158dp"
        android:layout_height="44dp"
        android:layout_marginBottom="14dp"
        android:background="#E17B7B"
        android:text="@string/new_user"
        app:layout_constraintBottom_toTopOf="@+id/fbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbutton" />

    <Button
        android:id="@+id/fbutton"
        android:layout_width="213dp"
        android:layout_height="39dp"
        android:background="#FD8484"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>